deploy/gitops/frontend/rollouts/blue_green/service_preview.yml
apiVersion: v1
kind: Service
metadata:
  name: humancat-frontend-preview-svc
spec:
  type: ClusterIP
  selector:
    app: humancat-frontend-rollout-blue-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: api-port
